Rebase fixes, break remoting to accelerate landing.

--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -1083,8 +1083,8 @@ DOMInterfaces = {
 },
 
 'OVR_multiview2': {
-    'nativeType': 'mozilla::WebGLExtensionMultiview',
-    'headerFile': 'WebGLExtensions.h'
+    'nativeType': 'mozilla::ClientWebGLExtensionMultiview',
+    'headerFile': 'ClientWebGLExtensions.h'
 },
 
 'WEBGL_compressed_texture_astc': {
@@ -1133,8 +1133,8 @@ DOMInterfaces = {
 },
 
 'WEBGL_explicit_present': {
-    'nativeType': 'mozilla::WebGLExtensionExplicitPresent',
-    'headerFile': 'WebGLExtensions.h'
+    'nativeType': 'mozilla::ClientWebGLExtensionExplicitPresent',
+    'headerFile': 'ClientWebGLExtensions.h'
 },
 
 'OES_element_index_uint': {
