--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -1053,12 +1053,12 @@ DOMInterfaces = {
 },
 
 'WebGLActiveInfo': {
-    'nativeType': 'mozilla::ClientWebGLActiveInfo',
+    'nativeType': 'mozilla::WebGLActiveInfoJS',
     'headerFile': 'WebGLActiveInfo.h'
 },
 
 'WebGLBuffer': {
-    'nativeType': 'mozilla::ClientWebGLBuffer',
+    'nativeType': 'mozilla::WebGLBufferJS',
     'headerFile': 'ClientWebGLContext.h'
 },
 
@@ -1238,22 +1238,22 @@ DOMInterfaces = {
 },
 
 'WebGLFramebuffer': {
-    'nativeType': 'mozilla::ClientWebGLFramebuffer',
+    'nativeType': 'mozilla::WebGLFramebufferJS',
     'headerFile': 'ClientWebGLContext.h'
 },
 
 'WebGLProgram': {
-    'nativeType': 'mozilla::ClientWebGLProgram',
+    'nativeType': 'mozilla::WebGLProgramJS',
     'headerFile': 'ClientWebGLContext.h'
 },
 
 'WebGLQuery': {
-    'nativeType': 'mozilla::ClientWebGLQuery',
+    'nativeType': 'mozilla::WebGLQueryJS',
     'headerFile': 'ClientWebGLContext.h'
 },
 
 'WebGLRenderbuffer': {
-    'nativeType': 'mozilla::ClientWebGLRenderbuffer',
+    'nativeType': 'mozilla::WebGLRenderbufferJS',
     'headerFile': 'ClientWebGLContext.h'
 },
 
@@ -1268,43 +1268,43 @@ DOMInterfaces = {
 },
 
 'WebGLSampler': {
-    'nativeType': 'mozilla::ClientWebGLSampler',
+    'nativeType': 'mozilla::WebGLSamplerJS',
     'headerFile': 'ClientWebGLContext.h'
 },
 
 'WebGLShader': {
-    'nativeType': 'mozilla::ClientWebGLShader',
+    'nativeType': 'mozilla::WebGLShaderJS',
     'headerFile': 'ClientWebGLContext.h'
 },
 
 'WebGLShaderPrecisionFormat': {
-    'nativeType': 'mozilla::ClientWebGLShaderPrecisionFormat',
+    'nativeType': 'mozilla::WebGLShaderPrecisionFormatJS',
     'headerFile': 'WebGLShaderPrecisionFormat.h',
     'wrapperCache': False
 },
 
 'WebGLSync': {
-    'nativeType': 'mozilla::ClientWebGLSync',
+    'nativeType': 'mozilla::WebGLSyncJS',
     'headerFile': 'ClientWebGLContext.h'
 },
 
 'WebGLTexture': {
-    'nativeType': 'mozilla::ClientWebGLTexture',
+    'nativeType': 'mozilla::WebGLTextureJS',
     'headerFile': 'ClientWebGLContext.h'
 },
 
 'WebGLTransformFeedback': {
-    'nativeType': 'mozilla::ClientWebGLTransformFeedback',
+    'nativeType': 'mozilla::WebGLTransformFeedbackJS',
     'headerFile': 'ClientWebGLContext.h'
 },
 
 'WebGLUniformLocation': {
-    'nativeType': 'mozilla::ClientWebGLUniformLocation',
+    'nativeType': 'mozilla::WebGLUniformLocationJS',
     'headerFile': 'ClientWebGLContext.h'
 },
 
 'WebGLVertexArrayObject': {
-    'nativeType': 'mozilla::ClientWebGLVertexArray',
+    'nativeType': 'mozilla::WebGLVertexArrayJS',
     'headerFile': 'ClientWebGLContext.h'
 },
 
