Extensions and bindings-matching.

--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -1125,7 +1125,8 @@ DOMInterfaces = {
 
 'WebGLActiveInfo': {
     'nativeType': 'mozilla::WebGLActiveInfoJS',
-    'headerFile': 'WebGLActiveInfo.h'
+    'headerFile': 'ClientWebGLContext.h',
+    'wrapperCache': False
 },
 
 'WebGLBuffer': {
@@ -1350,7 +1351,7 @@ DOMInterfaces = {
 
 'WebGLShaderPrecisionFormat': {
     'nativeType': 'mozilla::WebGLShaderPrecisionFormatJS',
-    'headerFile': 'WebGLShaderPrecisionFormat.h',
+    'headerFile': 'ClientWebGLContext.h',
     'wrapperCache': False
 },
 
