Extensions and bindings-matching.

--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -1054,7 +1054,8 @@ DOMInterfaces = {
 
 'WebGLActiveInfo': {
     'nativeType': 'mozilla::WebGLActiveInfoJS',
-    'headerFile': 'WebGLActiveInfo.h'
+    'headerFile': 'ClientWebGLContext.h',
+    'wrapperCache': False
 },
 
 'WebGLBuffer': {
@@ -1279,7 +1280,7 @@ DOMInterfaces = {
 
 'WebGLShaderPrecisionFormat': {
     'nativeType': 'mozilla::WebGLShaderPrecisionFormatJS',
-    'headerFile': 'WebGLShaderPrecisionFormat.h',
+    'headerFile': 'ClientWebGLContext.h',
     'wrapperCache': False
 },
 
